[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "uxlint"
version = "0.0.2"
description = "AI-powered UX quality gate. Paste a URL, get Pass/Fail in 30 seconds."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "GoodWelchi, Inc.", email = "contact@goodwelchi.com"},
]
keywords = ["ux", "lint", "accessibility", "usability", "ai"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://uxlint.dev"
Repository = "https://github.com/goodwelchi/uxlint"

[project.scripts]
uxlint = "uxlint.cli:main"