[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "uxlint"
version = "0.0.3"
description = "AI-powered UX checker. Enter a URL, get UX insights in 60 seconds."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Good Welchi, Inc.", email = "contact@uxlint.dev"},
]
keywords = ["ux", "lint", "accessibility", "usability", "ai"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://uxlint.dev"
Repository = "https://github.com/uxlint/cli"

[project.scripts]
uxlint = "uxlint.cli:main"